[package]
name = "axum-grouping-ws-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.2.0", features= ["ws", "headers"] }
serde = "1.0.127"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
nats = "0.13.0"
