[[bin]]
name = 'server'
path = 'src/main.rs'

[package]
name = 'axum-grouping-ws-server'
version = '0.1.0'
edition = '2018'

[dependencies]
serde = '1.0.127'
futures = '0.3'
nats = '0.13.0'
tracing = '0.1'
tracing-subscriber = '0.2'
env_logger = '0.9.0'

[dependencies.axum]
version = '0.3.3'
features = [
    'ws',
    'headers',
]

[dependencies.tokio]
version = '1'
features = ['full']

[dependencies.tower-http]
version = '0.1'
features = ['trace']

[dependencies.hyper]
version = '0.14'
features = ['full']

[dev-dependencies]
url = '2.0.0'
tokio-tungstenite = '0.15.0'
